# banka-v2

./: CMakeLists.txt  Dockerfile  README.md  install_deps.sh
.github/workflows/: cmake.yml
install_scripts/: install_cgi_script.sh  install_deps.sh
server_configs/: httpd.conf  ubuntu_apache.conf
src/main/: main.cpp
src/main/models/: Bank.cpp  Currency.cpp  ExchangeRates.cpp  UserAccount.cpp
src/main/models/headers/: Bank.h  Currency.h  ExchangeRates.h  UserAccount.h
src/main/pages/: PageGenerator.cpp  PageGenerator.h
src/main/services/: BusinessLogic.cpp  BusinessLogic.h  SiteFunctionality.h
tests/: test_basic_http_get.sh
